--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
                 <h3>Burger</h3>
                 <image></image>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Napper</li>
+                    <li>Climber</li>
+                    <li>Troublemaker</li>
                     </ul>
                     <h3>Hugo</h3>
                     <image></image>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Where's</li>
+                        <li>My</li>
+                        <li>Food</li>
                     </ul>
                     </article>
                     <article>
                     <h3>Pickles</h3>
                     <image></image>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Little</li>
+                        <li>Scaredy</li>
+                        <li>Cat</li>
                     </ul>
                     </article>
                 </article>
