Added correct links

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
    <header>
-    <h1>Our Family Pets</h1>
+    <h1>Our Team Pets</h1>
     <nav>
         <ul>
-            <li><a href="https//partnerusername.github.io/repo-name"></a></li>
-            <li><a href="https//https://github.com/MRGrant82"></a></li>
+            <li><a href="https://kaedenoc.github.io/website1/">Link to Partner's Page</a></li>
+            <li><a href="https://github.com/MRGrant82">Link to Michael Grant's Portfolio</a></li>
             
         </ul>
     </nav>
