--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Pets</title>
 </head>
+<style>
+    body {
+        background-color: fuchsia;
+    }
+    h1 {
+        color: blue;
+        margin-left: 40px;
+    }
+</style>
 <body>
+    
    <header>
     <h1>Our Team Pets</h1>
     <nav>
@@ -23,29 +33,28 @@
         <article>
             <section>
                 <h3>Burger</h3>
-                <image></image>
+                <img src="Images/burger.jpg" alt= "Picture of Burger"/>
                 <ul>
-                    <li>Napper</li>
-                    <li>Climber</li>
-                    <li>Troublemaker</li>
-                    </ul>
-                    <h3>Hugo</h3>
-                    <image></image>
-                    <ul>
-                        <li>Where's</li>
-                        <li>My</li>
-                        <li>Food</li>
-                    </ul>
-                    </article>
-                    <article>
-                    <h3>Pickles</h3>
-                    <image></image>
-                    <ul>
-                        <li>Little</li>
-                        <li>Scaredy</li>
-                        <li>Cat</li>
-                    </ul>
-                    </article>
+                <li>Napper</li>
+                <li>Climber</li>
+                <li>Troublemaker</li>
+                </ul>
+                <h3>Hugo</h3>
+                <img src="Images/hugo.jpg" alt= "Picture of Hugo"/>
+                <ul>
+                <li>Where's</li>
+                <li>My</li>
+                <li>Food</li>
+                </ul>
+                </article>
+                <article>
+                <h3>Pickles</h3>
+                <img src="Images/pickles.jpg" alt= "Picture of Pickles"/>
+                <ul>
+                <li>Little</li>
+                <li>Scaredy</li>
+                <li>Cat</li>
+                </ul>
                 </article>
             </section>
         </article>
