--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Pets</title>
 </head>
-<style>
-    body {
-        background-color: fuchsia;
-    }
-    h1 {
-        color: blue;
-        margin-left: 40px;
-    }
-</style>
+<link rel="stylesheet" href="styles.css">
 <body>
     
    <header>
@@ -31,33 +23,28 @@
    <main>
     <section>
         <article>
-            <section>
                 <h3>Burger</h3>
-                <img src="Images/burger.jpg" alt= "Picture of Burger"/>
+                <img id="burger" src="Images/burger.jpg" alt= "Picture of Burger"/>
                 <ul>
                 <li>Napper</li>
                 <li>Climber</li>
                 <li>Troublemaker</li>
                 </ul>
                 <h3>Hugo</h3>
-                <img src="Images/hugo.jpg" alt= "Picture of Hugo"/>
+                <img id="hugo" src="Images/hugo.jpg" alt= "Picture of Hugo"/>
                 <ul>
                 <li>Where's</li>
                 <li>My</li>
                 <li>Food</li>
                 </ul>
-                </article>
-                <article>
                 <h3>Pickles</h3>
-                <img src="Images/pickles.jpg" alt= "Picture of Pickles"/>
+                <img id="pickles" src="Images/pickles.jpg" alt= "Picture of Pickles"/>
                 <ul>
                 <li>Little</li>
                 <li>Scaredy</li>
                 <li>Cat</li>
                 </ul>
-                </article>
-            </section>
-        </article>
+            </article>
     </section>
    </main>
    
