--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <link rel="stylesheet" href="styles.css">
 <body>
-    
+    <script src="app.js"></script> 
    <header>
     <h1>Our Team Pets</h1>
     <nav>
@@ -19,7 +19,7 @@
         </ul>
     </nav>
    </header>
-   
+   <script src="app.js"></script>
    <main>
     <section>
         <article>
@@ -49,7 +49,9 @@
    </main>
    
    <footer>
-
+    <script>
+        {document.write("Please visit again.")}
+    </script>
    </footer> 
 </body>
 </html>
