Worked with K to get everything to look better

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <h1>Our Team Pets</h1>
     <nav>
         <ul>
-            <li><a href="https://kaedenoc.github.io/website1/">Link to Partner's Page</a></li>
-            <li><a href="https://github.com/MRGrant82">Link to Michael Grant's Portfolio</a></li>
+            <li id="partner"><a href="https://kaedenoc.github.io/website1/">Link to Partner's Page</a></li>
+            <li id="portfolio"><a href="https://github.com/MRGrant82">Link to Michael Grant's Portfolio</a></li>
             
         </ul>
     </nav>
    </header>
-   <script src="app.js"></script>
-   <main>
+    <main>
     <section>
         <article>
                 <h3>Burger</h3>
@@ -30,6 +29,8 @@
                 <li>Climber</li>
                 <li>Troublemaker</li>
                 </ul>
+        </article>        
+        <article>
                 <h3>Hugo</h3>
                 <img id="hugo" src="Images/hugo.jpg" alt= "Picture of Hugo"/>
                 <ul>
@@ -37,6 +38,8 @@
                 <li>My</li>
                 <li>Food</li>
                 </ul>
+        </article>       
+        <article>        
                 <h3>Pickles</h3>
                 <img id="pickles" src="Images/pickles.jpg" alt= "Picture of Pickles"/>
                 <ul>
@@ -44,9 +47,9 @@
                 <li>Scaredy</li>
                 <li>Cat</li>
                 </ul>
-            </article>
+        </article>
     </section>
-   </main>
+    </main>
    
    <footer>
     <script>
