I am still fixing it.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         printWelcomeMessage(userName);
         askForCoffeePreference();
       }
-      </script>
+
       function welcomeMessage(name, userName) {
         alert("Welcome to my website, " + userName + "! I am " + name + ".");
       }
@@ -90,6 +90,7 @@
         }
       }
 
-      
-
-      
+      runWelcomeLoop();
+    </script>
+  </body>
+</html>
